# webby

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.runtime  KANBAN.md  README.md  flake.nix
manifests/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
migrations/: 0001_push_subscriptions.sql
nix/modules/: runner.nix  server.nix
packaging/systemd/: README.md  webby-runner.env.example  webby-runner.service
packaging/systemd/user/: webby-runner@.service
public/: sw.js  webby-terminal.js
src/: app.rs  lib.rs  main.rs  notifications.rs  runner.rs
src/terminal/: mod.rs  protocol.rs  relay.rs
style/: main.scss
