[package]
name = "webby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webby"
path = "src/main.rs"
required-features = ["ssr", "runner"]

[dependencies]
leptos = { version = "0.6" }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
leptos_axum = { version = "0.6", optional = true }

axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
http = { version = "1", optional = true }

console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.121"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"

web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Navigator",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionOptionsInit",
    "PushSubscriptionJson",
    "Notification",
    "HtmlDivElement",
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

web-push = { version = "0.10", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
portable-pty = { version = "0.8", optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

dotenvy = { version = "0.15", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }
libsqlite3-sys = { version = "0.28", features = ["bundled"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:leptos_axum",
    "dep:dotenvy",
    "dep:sqlx",
    "dep:libsqlite3-sys",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:web-push",
    "dep:uuid",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
runner = [
    "dep:portable-pty",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:clap",
    "dep:tokio",
    "dep:uuid",
]

[package.metadata.leptos]
bin-target = "webby"
output-name = "webby"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "0.0.0.0:8080"
reload-port = 3001
browserquery = "defaults"
hash-files = false
env = "DEV"
bin-features = ["ssr", "runner"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
